# solverforge-quickstart-template

./: .gitignore  Dockerfile  README.md  README_HUGGINGFACE.md  logging.conf  pyproject.toml
src/my_quickstart/: __init__.py  constraints.py  demo_data.py  domain.py  json_serialization.py  rest_api.py  solver.py
static/: app.css  app.js  index.html
static/webjars/solverforge/css/: solverforge-webui.css
static/webjars/solverforge/js/: solverforge-webui.js
tests/: test_constraints.py  test_rest_api.py
